Add role-based access control (ADMIN/USER) to IRMIS
Introduce a Role enum on the User entity (defaulting to USER so local- and
SSO-created accounts are non-privileged unless promoted). Authorities are now
emitted as ROLE_<role> so Spring's hasRole works, and an admin-only
GET /api/user/all endpoint is guarded with @PreAuthorize plus @EnableMethodSecurity.

The role is surfaced through AuthResponse and /user/me, persisted onto the
stored session (so SSO sign-ins resolve admin status on next navigation), and
drives the Angular UI: a role badge, a "Manage users" link, and a /users page
guarded client-side by adminGuard (server still enforces).

Seed an extra USER account and log SSO login failures for easier debugging.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>