@@ -2,13 +2,14 @@ package com.risa.irmis.security;
 
 import com.risa.irmis.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +23,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         com.risa.irmis.entity.User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
 
-        return new User(user.getEmail(), user.getPassword(), Collections.emptyList());
+        // Spring's hasRole('ADMIN') checks for the authority "ROLE_ADMIN".
+        var authority = new SimpleGrantedAuthority("ROLE_" + user.getRole().name());
+        return new User(user.getEmail(), user.getPassword(), List.of(authority));
     }
 }
